# fastapi-apprunner-test

./: .dockerignore  .gitignore  Dockerfile  NOTICE  README.md  apprunner.yaml  main.py  pyproject.toml  requirements.txt
